// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders content 1`] = `
<div
  onClick={[Function]}
  onContextMenu={[Function]}
  onDragEnd={[Function]}
  onDragStart={[Function]}
  onMouseDown={[Function]}
  onMouseEnter={[Function]}
  onMouseLeave={[Function]}
  onMouseMove={[Function]}
  onMouseOver={[Function]}
  onMouseUp={[Function]}
  role="listitem"
  style={
    Object {
      "background": "#0E6BA8",
      "display": "flex",
      "pointerEvents": "auto",
      "position": "absolute",
      "zIndex": "100",
    }
  }
>
  <myComp
    style={
      Object {
        "height": 20,
        "pointerEvents": "auto",
        "width": 20,
      }
    }
  />
  <div
    style={
      Object {
        "height": 20,
        "pointerEvents": "auto",
        "width": 20,
      }
    }
  />
  <div
    style={
      Object {
        "height": 20,
        "pointerEvents": "auto",
        "width": 20,
      }
    }
  />
  <myComp
    style={
      Object {
        "height": 20,
        "pointerEvents": "auto",
        "width": 20,
      }
    }
  >
    hobo
  </myComp>
</div>
`;

exports[`renders content only body 1`] = `
<div
  onClick={[Function]}
  onContextMenu={[Function]}
  onDragEnd={[Function]}
  onDragStart={[Function]}
  onMouseDown={[Function]}
  onMouseEnter={[Function]}
  onMouseLeave={[Function]}
  onMouseMove={[Function]}
  onMouseOver={[Function]}
  onMouseUp={[Function]}
  role="listitem"
  style={
    Object {
      "background": "#0E6BA8",
      "display": "flex",
      "pointerEvents": "auto",
      "position": "absolute",
      "zIndex": "100",
    }
  }
>
  <div
    style={
      Object {
        "height": 20,
        "pointerEvents": "auto",
        "width": 20,
      }
    }
  />
  <div
    style={
      Object {
        "height": 20,
        "pointerEvents": "auto",
        "width": 20,
      }
    }
  />
  <div
    style={
      Object {
        "height": 20,
        "pointerEvents": "auto",
        "width": 20,
      }
    }
  />
  <div
    style={
      Object {
        "height": 20,
        "pointerEvents": "auto",
        "width": 20,
      }
    }
  />
</div>
`;

exports[`renders content only last  1`] = `
<div
  onClick={[Function]}
  onContextMenu={[Function]}
  onDragEnd={[Function]}
  onDragStart={[Function]}
  onMouseDown={[Function]}
  onMouseEnter={[Function]}
  onMouseLeave={[Function]}
  onMouseMove={[Function]}
  onMouseOver={[Function]}
  onMouseUp={[Function]}
  role="listitem"
  style={
    Object {
      "background": "#0E6BA8",
      "display": "flex",
      "pointerEvents": "auto",
      "position": "absolute",
      "zIndex": "100",
    }
  }
>
  <div
    style={
      Object {
        "height": 20,
        "pointerEvents": "auto",
        "width": 20,
      }
    }
  />
  <div
    style={
      Object {
        "height": 20,
        "pointerEvents": "auto",
        "width": 20,
      }
    }
  />
  <div
    style={
      Object {
        "height": 20,
        "pointerEvents": "auto",
        "width": 20,
      }
    }
  />
  <div
    style={
      Object {
        "height": 20,
        "pointerEvents": "auto",
        "width": 20,
      }
    }
  />
</div>
`;
